--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 };
 
                 $.ajax({
-                    url: 'https://st7ie53ef4.execute-api.us-east-1.amazonaws.com/prod/recommend',
+                    url: 'INSERT_YOUR_API_ADDRESS_HERE',
                     type: 'POST',
                     data: JSON.stringify(data),
                     contentType: 'application/json',
