Added datasets and updated readme

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
 
     <script>
-        const apiUrl = 'https://2bnutzs9il.execute-api.us-east-1.amazonaws.com/prod/recommend'; // Replace with your actual API Gateway URL
+        const apiUrl = 'INSERT_API_GATEWAY_LINK_HERE'; // Replace with your actual API Gateway URL from the cloudformation stack output
 
         const product_descriptions = {
             'ind_ahor_fin_ult1': 'Savings',
